log
Wed, Apr 16, 2025  8:32:54 AM: 
 hashmap.c | 23 +++++++++++++++++++++++
 1 file changed, 23 insertions(+)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'createMap':
hashmap.c:61:19: error: assignment to 'Pair **' from incompatible pointer type 'Pair *' [-Werror=incompatible-pointer-types]
   61 |     mapa->buckets = (Pair*) malloc(sizeof(Pair) * capacity); //resevamos para toda la capacidad;
      |                   ^
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Wed, Apr 16, 2025  8:32:59 AM: 
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'createMap':
hashmap.c:61:19: error: assignment to 'Pair **' from incompatible pointer type 'Pair *' [-Werror=incompatible-pointer-types]
   61 |     mapa->buckets = (Pair*) malloc(sizeof(Pair) * capacity); //resevamos para toda la capacidad;
      |                   ^
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
ed100a7
Wed, Apr 16, 2025  8:33:04 AM: 
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'createMap':
hashmap.c:61:19: error: assignment to 'Pair **' from incompatible pointer type 'Pair *' [-Werror=incompatible-pointer-types]
   61 |     mapa->buckets = (Pair*) malloc(sizeof(Pair) * capacity); //resevamos para toda la capacidad;
      |                   ^
test.c: At top level:
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
8edeaf1
Wed, Apr 16, 2025  8:34:45 AM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
2a83a90
Wed, Apr 16, 2025  8:34:50 AM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
67f8d8f
Wed, Apr 16, 2025  8:35:50 AM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
0f800d1
Wed, Apr 16, 2025  8:35:59 AM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
a8b0da2
Wed, Apr 16, 2025  9:03:02 AM: 
 hashmap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
943e614
Wed, Apr 16, 2025  8:54:02 PM: 
 hashmap.c | 22 +++++++++++++++++++---
 1 file changed, 19 insertions(+), 3 deletions(-)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
1fff7d1
Wed, Apr 16, 2025  8:54:13 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
5d2223a
Wed, Apr 16, 2025  8:54:15 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
2e143c6
Wed, Apr 16, 2025  8:55:15 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
b3c5b5e
